@@ -41,44 +41,6 @@
                     <meminitial>128m</meminitial>
                     <maxmem>512m</maxmem>
                 </configuration>
-<!--
-                <executions>
-                    <execution>
-                        <id>default-compile</id>
-                        <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <compilerArgs>
-                        <arg>- -add-exports</arg>
-                        <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
-                        <arg>- -add-exports</arg>
-                        <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>default-testCompile</id>
-                        <configuration>
-                            <compilerArgs>
-                                <arg>- -add-exports</arg>
-                                <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
-                                <arg>- -add-exports</arg>
-                                <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>
-                </executions>
--->
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --add-opens java.base/sun.security.util=ALL-UNNAMED
-                        --add-opens java.base/sun.security.x509=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
